Fix button alignment

--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@
 }
 
 .btn {
-  margin-right: 10px;
+  margin-left: 10px;
 }
 
 .container {
